--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <header>
-      <a href="#" class="logo">COC-STAT</a>
+      <a href="#" class="logo"> তন্ত্র-মন্ত্র-যন্ত্র </a>
       <ul class="navlist">
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
