--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
       <a href="#"><i class="ri-arrow-down-s-fill"></i></a>
     </div>
 
+    <!-- custom Reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
     <!-- Custom Js link -->
-    <script src="js/scripts.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
